feat: delete game from user
